# pecto

./: .gitignore  Cargo.toml  LICENSE  PLAN_V2.md  README.md
.github/actions/pecto/: action.yml
.github/actions/pecto-pr/: action.yml
.github/workflows/: ci.yml  release.yml
crates/pecto-cli/: Cargo.toml
crates/pecto-cli/src/: dashboard.rs  main.rs  report.rs  serve.rs
crates/pecto-core/: Cargo.toml
crates/pecto-core/src/: context_export.rs  domains.rs  inheritance.rs  lib.rs  mermaid.rs  model.rs  output.rs  pr_diff.rs  rules.rs
crates/pecto-csharp/: Cargo.toml
crates/pecto-csharp/src/: context.rs  dependencies.rs  flow.rs  lib.rs  parser.rs
crates/pecto-csharp/src/extractors/: common.rs  controller.rs  entity.rs  mod.rs  rest_client.rs  scheduled.rs  service.rs
crates/pecto-csharp/tests/: integration_eshop.rs
crates/pecto-java/: Cargo.toml
crates/pecto-java/src/: context.rs  dependencies.rs  flow.rs  lib.rs  parser.rs  spring.rs
crates/pecto-java/src/extractors/: common.rs  controller.rs  entity.rs  mod.rs  repository.rs  scheduled.rs  service.rs
crates/pecto-java/tests/: integration_petclinic.rs
crates/pecto-python/: Cargo.toml
crates/pecto-python/src/: context.rs  dependencies.rs  flow.rs  lib.rs  parser.rs
crates/pecto-python/src/extractors/: common.rs  controller.rs  entity.rs  scheduled.rs  service.rs
crates/pecto-python/tests/: integration_fastapi.rs
crates/pecto-typescript/: Cargo.toml
crates/pecto-typescript/src/: context.rs  dependencies.rs  flow.rs  lib.rs  parser.rs
crates/pecto-typescript/src/extractors/: common.rs  controller.rs  entity.rs  mod.rs  service.rs
crates/pecto-typescript/tests/: integration_nestjs.rs
docs/: LAUNCH.md
specs/: FORMAT.md
