[workspace]
members = [
    "crates/pecto-core",
    "crates/pecto-java",
    "crates/pecto-csharp",
    "crates/pecto-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pecto-dev/pecto"
description = "Extract behavior specs from code through static analysis"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
rayon = "1"
owo-colors = "4"
thiserror = "2"
anyhow = "1"
walkdir = "2"
similar = "2"
