[package]
name = "pecto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extract behavior specs from code through static analysis"

[[bin]]
name = "pecto"
path = "src/main.rs"

[dependencies]
pecto-core = { path = "../pecto-core", version = "0.1.0" }
pecto-java = { path = "../pecto-java", version = "0.1.0" }
pecto-csharp = { path = "../pecto-csharp", version = "0.1.0" }
pecto-python = { path = "../pecto-python", version = "0.1.0" }
pecto-typescript = { path = "../pecto-typescript", version = "0.1.0" }
clap = { workspace = true }
anyhow = { workspace = true }
owo-colors = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
