[package]
name = "pecto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core behavior spec model and analysis framework"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
similar = { workspace = true }
