[package]
name = "pecto-csharp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C#/.NET behavior extractor"

[dependencies]
pecto-core = { path = "../pecto-core", version = "0.1.1" }
tree-sitter = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
