[package]
name = "pecto-java"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Java/Spring Boot behavior extractor"

[dependencies]
pecto-core = { path = "../pecto-core", version = "0.1.0" }
tree-sitter = { workspace = true }
tree-sitter-java = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
