[package]
name = "pecto-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python behavior extractor (FastAPI, Flask, Django)"

[dependencies]
pecto-core = { path = "../pecto-core" }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
