[package]
name = "pecto-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TypeScript/JavaScript behavior extractor (Express, NestJS, Next.js)"

[dependencies]
pecto-core = { path = "../pecto-core", version = "0.1.0" }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
